--- a/client/search/src/App.css
+++ b/client/search/src/App.css
@@ -25,6 +25,9 @@ body{
 #search_box{
   background-color: #f7f7f9;
 }
+#s1{
+  font-size: 20px;
+}
 #search_text{
   text-transform: uppercase;
     letter-spacing: 3px;
